--- a/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
@@ -125,7 +125,8 @@
           <h3>ITD</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Interaural time difference</b> è la differenza di tempo di arrivo del segnale alle due orecchie. La valutazione della differenza di tempo di arrivo non è banale per tutti i tipi di sorgente perchè i gangli fanno una misura di correlazione tra
+            <b>Interaural time difference</b> è la differenza di tempo di arrivo del segnale alle due orecchie. La valutazione della differenza di tempo di arrivo non è banale per tutti i tipi di sorgente perchè i gangli fanno una misura di
+            correlazione tra
             i segnali che arrivano alle due orecchie in un tot. di tempo. Se il tempo è al di sotto di un certo valore il sitema percettivo non riesce a stargli dietro e la misura di valutazione è poco significativa.
             <br>
             <br>
@@ -140,7 +141,8 @@
           <h3>IID (ILD)</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Interaural intensity difference</b> o <b>Interaural intensity difference</b> anche qui vi è una differenza di livello tra i segnali che arrivano alle due orecchie. Ma da cosa può dipendere la differenza di livello che arriva alle due orecchie? Cosa
+            <b>Interaural intensity difference</b> o <b>Interaural intensity difference</b> anche qui vi è una differenza di livello tra i segnali che arrivano alle due orecchie. Ma da cosa può dipendere la differenza di livello che arriva alle due
+            orecchie? Cosa
             puó portare a una differenza di livello percepito dalle due orecchie? La presenza della testa ad esempio non vale per tutto lo spettro ma c'è la diffrazione e dunque alcune frequenze che hanno piú difficoltà ad attraversa ostacoli ovvero
             le lunghezze d'onda confrontabili con la testa non oltrepasseranno la stessa, la testa realizzerà un ostacolo. Le frequenze basse hanno una lunghezza d'onda e quindi la capacità di aggirare la testa mentre le frequenze piú alte non
             riescono ad aggirarla.
@@ -164,7 +166,103 @@
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Ci sono delle superfici dello spazio che danno luogo a delle ambiguità, poichè se si pensa ad una sorgente che è su un certo punto dello spazio, e da dei risultati, tutte le sorgenti che sono all'interno del cono ha stessi valori di IID e
+            ITD a entrambe le orecchie e vi è dunque un'ambiguità intrinseca. Teoricamente il nostro sistema percettivo si troverebbe in uno stato di confusione(usando solo IID e ITD) poichè non saprebbe determinare la reale posizione della sorgente.
+            Allora la nostra percezione viene guidata anche dagli altri meccanismi (adattivi di movimento in questo caso), tendiamo a girare la testa per assumere posizioni dinamiche, o a prolungare il padiglione auricolare, o sennó usiamo le HRTF.
+            <br>
+            <br>
+          </p>
+          <h3>HRTF</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            <b>Head related transfer functions</b>. Da piccoli eravamo felici perchè il cervello era vergine, con una mente psichedelica che aggira tutte le costruzioni della nostra storia psichica. Il bambino impara come è fatta la realtà
+            esplorandola in tutti i sensi, perchè volgiono costruirsi una rappresentazione della realtà. Questa rappresentazione inizia a costruire delle cattedrali percettive. Una delle attività che il bambino fa è lavorare sull'udito. Il bambino ha
+            dei padiglioni auricolari che per effetto di diffrazione e rifrazione generano un certo tipo di filtraggio dipendente dalla lunghezza d'onda del segnale. A seconda della lunghezza d'onda i padiglioni possono essere percepiti come
+            inesistenti oppure si possono sentire tutte le curve.
+            Da una certa lunghezza d'onda in giù e da una certa lunghezza d'onda in su i padiglioni auricolari avranno un ruolo nell'ascolto. I padiglioni a seconda della frequenza attueranno un filtraggio a seconda della direzione e altezza
+            sorgente.
+            Il bambino quando apprende la localizzazione delle sorgenti, il bambino memorizza i pattern di filtraggio (mettendoci anche la verifica visuale), il cervello fa una verifica di direzione.
+            Dopo anni i meccanismi del bambino si rinforzano, il nostro cervello quindi impara e classifica pattern e li realizza quando li ri-ascolta. Il cervello associa dei pattern di filtraggio(delle mappe) con delle direzioni nello spazio che
+            riesce a stimolare quando gli si ripresentano.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Ci sono delle superfici dello spazio che danno luogo a delle ambiguità, poichè se si pensa ad una sorgente che è su un certo punto dello spazio, e da dei risultati, tutte le sorgenti che sono all'interno del cono ha stessi valori di IID e
+            ITD a entrambe le orecchie e vi è dunque un'ambiguità intrinseca. Teoricamente il nostro sistema percettivo si troverebbe in uno stato di confusione(usando solo IID e ITD) poichè non saprebbe determinare la reale posizione della sorgente.
+            Allora la nostra percezione viene guidata anche dagli altri meccanismi (adattivi di movimento in questo caso), tendiamo a girare la testa per assumere posizioni dinamiche, o a prolungare il padiglione auricolare, o sennó usiamo le HRTF.
+            <br>
+            <br>
+          </p>
+          <h3>HRTF</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Questi sono dei pattern di filtraggio.
+            In ascissa abbiamo la frequenza in KHz(dai 2KHz poichè per interagire con il padiglione, testa e torso, deve avere una certa forma d'onda), il profilo di filtraggio cambia a seconda della direzione della sorgente (sulle ordinate a
+            destra). C'è ad esempio un notch sui 6KHz ed il notch si sposta progressivamente sulle frequenze piú alte. Qui si vedono tutte le frequenze che si spostano in frequenza a secondo della direzione.
+            <br>
+            <br>
+            L'HRTF per la composizione è utile per dare l'impressione che un suono provenga da un certo punto specifico.
+            <br>
+            <br>
+            Come vengono utilizzate le HRTF in simulazione?
+            Queste funzioni trasformate e portate su dataset, possono esere codificate in una libreria di filtri a seconda della direzione che vogliamo imprimere alla sorgente.
+            <br>
+            <br>
+            Se ho un tot di curve di filtraggio, posso interpolare lo spostamento di suono tra un punto e l'altro.
+            <br>
+            <br>
+            Attraverso un algoritmo si riescono dunque a spostare i suoni e si possono anche interpolare suoni tra una curva ed un altra.
+            <br>
+            <br>
+            Questo meccanismo aiuta insieme a ITD e IID aiuta a defiire la posizione del suono alto, basso e dietro(sul piano zenithale ovvero verticale).
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
