--- a/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
@@ -172,8 +172,8 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/25_cone.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
           </div>
         </div>
       </div>
@@ -216,8 +216,8 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/25_cipic.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
           </div>
         </div>
       </div>
