--- a/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html
@@ -242,10 +242,7 @@
             Queste funzioni trasformate e portate su dataset, possono esere codificate in una libreria di filtri a seconda della direzione che vogliamo imprimere alla sorgente.
             <br>
             <br>
-            Se ho un tot di curve di filtraggio, posso interpolare lo spostamento di suono tra un punto e l'altro.
-            <br>
-            <br>
-            Attraverso un algoritmo si riescono dunque a spostare i suoni e si possono anche interpolare suoni tra una curva ed un altra.
+            Se ho un tot di curve di filtraggio, posso interpolare lo spostamento di suono tra un punto e l'altro. Attraverso un algoritmo si riescono dunque a spostare i suoni e si possono anche interpolare suoni tra una curva ed un altra.
             <br>
             <br>
             Questo meccanismo aiuta insieme a ITD e IID aiuta a defiire la posizione del suono alto, basso e dietro(sul piano zenithale ovvero verticale).
