--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -188,6 +188,7 @@
             <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>Acustica della sala da concerto</b></a></li>
             <li><a href="https://www.akutek.info/Presentations/MS_Preference_Prediction_Pres.pdf"><b>Room Acoustical Parameters: Can concert hall preference be predicted?</b></a></li>
             <li><a href="https://www.akutek.info/research.htm"><b>Sito di ricerca acustica</b></a></li>
+            <li><a href="https://acoustic.ua/rt60/?lang=en"><b>Room Acoustic Calculator</b></a></li>
           </ul>
           <br><br>
           </p>
