--- a/pages/learn.html
+++ b/pages/learn.html
@@ -341,7 +341,7 @@
                     <div class="card-header" role="tab" id="headingTwo">
                       <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2" aria-expanded="false"
                         aria-controls="collapse2">
-                        <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Interpretation and Performance of Electroacoustic Music (3)</strong></h6>
+                        <h6 class="panel-title-edit align-left mbr-fonts-style mb-0 display-5"><strong>Interpretation and Performance of Electroacoustic Music (3)</strong></h6>
                         <span class="sign mbr-iconfont mbri-arrow-down"></span>
                       </a>
                     </div>
