--- a/pages/learn.html
+++ b/pages/learn.html
@@ -396,7 +396,7 @@
                                       <br><strong>Interpretazione ed Esecuzione di Cartridge Music - John Cage</strong>
                                     </h5>
                                   </div>
-                                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen" class="btn btn-primary item-btn display-7" target="_blank">Coming Soon
+                                  <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                                       &gt;</a></div>
                                 </div>
                               </div>
