--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -82,7 +82,7 @@
         <div class="card col-12 col-lg-10">
           <div class="card-wrapper">
             <div class="card-box align-center">
-              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>ACUSTICA DEGLI AMBIENTI MUSICALI</strong></h4>
+              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>INTERPRETAZIONE ED ESECUZIONE DI CARTRIDGE MUSIC - JOHN CGE</strong></h4>
             </div>
           </div>
         </div>
@@ -104,62 +104,29 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
-            <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html"><b>01.02. Tre Metodi di Studio</b></a></li>
-            </ul>
-            <li><b>02. Approccio Modale</b></li>
-            <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>02.01. Modi Naturali in Una Dimensione Spaziale</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_02_risposta_in_frequenza.html"><b>02.02. Risposta in Frequenza</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_03_modi_naturali_in_tre_dimensioni_spaziali.html"><b>02.03. Modi Naturali in Tre Dimensioni Spaziali</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html"><b>02.04. Analisi delle Frequenze Associate</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html"><b>02.05. Curva di Risonanza di un Modo Naturale</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html"><b>02.06. Frequenza di Schroeder</b></a></li>
-            </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_00_approccio_geometrico.html"><b>03. Approccio Geometrico</b></a></li>
-            <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html"><b>03.01. Ray Tracing</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>03.02. Sorgenti Virtuali</b></a></li>
-            </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html"><b>04. Approccio Statistico</b></a></li>
-            <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>04.01. Formula di Sabine</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html"><b>04.02. Formula di Norris-Eyring</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html"><b>04.03. Attenuazione Dovuta alla Propagazione</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html"><b>04.04. Filtraggio dell'Aria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_07_norma_iso_3382_e_alcuni_descrittori_statistici.html"><b>04.07. Norma ISO 3382 e alcuni Descrittori Statistici</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>04.08. Descrittori Statistici Relativi all'Energia</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_09_meccanismi_percetttivi_dello_spazio_e_della_sorgente.html"><b>04.09. Meccanismi Percettivi dello Spazio e della Sorgente</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_10_meccanismi_percetttivi_della_distanza.html"><b>04.10. Meccanismi Percettivi della Distanza</b></a></li>
-            </ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/05_00_misurazione_acustica_di_un_ambiente.html"><b>05. Misurazione Acustica di un Ambiente</b></a></li>
-              </p>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_introduzione.html"><b>01. Introduzione</b></a></li>
+          </ul>
+          </p>
         </div>
       </div>
     </div>
   </section>
 
 
-  <!-- Bibliografia-->
+  <!-- Downloads-->
 
   <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-            <strong>BIBLIOGRAFIA</strong>
+            <strong>DOWNLOADS</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
-            <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>Principi Base di Acustica, capitolo 1 - Angelo Farina</b></i></a></li>
-            <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>Transfer-Function Measurement with Sweeps - MULLER, MASSARANI</b></i></a></li>
           </ul>
           </p>
         </div>
@@ -178,19 +145,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.falstad.com/mathphysics.html"><b>Falstad - Applets</b></a></li>
-            <li><a href="https://www.roomeqwizard.com/"><b>REW - Room Acoustics Software</b></a></li>
-            <li><a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=300&fo=200&fu=21&r60=0.6"><b>AMROC - The Room Modes Calculator</b></a></li>
-            <li><a href="https://amcoustics.com/tools/amray"><b>AMROC - Raytracing sketchpad</b></a></li>
-            <li><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/Acoustic/auditcon.html#c1"><b>Hyperphysics</b></a>, sito di didattica della fisica organizzato per mappe concettuali. Il link si riferisce alla sezione dedicata all'acustica degli
-              spazi.</li>
-            <li><a href="http://www.acoustic-glossary.co.uk/"><b>Acoustic Glossary</b></a></li>
-            <li><a href="https://store.uni.com/uni-en-iso-3382-1-2009"><b>Norma ISO 3382 Part 1</b></a>, spazi performativi</li>
-            <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>AKUTEK.INFO (Concert Hall Acoustics)</b></a></li>
-            <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>Acustica della sala da concerto</b></a></li>
-            <li><a href="https://www.akutek.info/Presentations/MS_Preference_Prediction_Pres.pdf"><b>Room Acoustical Parameters: Can concert hall preference be predicted?</b></a></li>
-            <li><a href="https://acoustic.ua/rt60/?lang=en"><b>Room Acoustic Calculator</b></a></li>
-            <li><a href="https://www.10log.com/public/rt"><b>RT60 Calculator</b></a></li>
+            <li><a href="https://www.youtube.com/watch?v=qoRPaWhovEc"><b>Video - Michael Schell introduces John Cage's Cartridge Music</b></a></li>
           </ul>
           <br><br>
           </p>
