--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -104,7 +104,8 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_introduzione.html"><b>01. Introduzione</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/01_00_introduzione.html"><b>01. Introduzione</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/02_00_iistruzioni.html"><b>02. Istruzioni</b></a></li>
           </ul>
           </p>
         </div>
@@ -124,9 +125,9 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><i><b>Cartridge Music, ita ver</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/white_sheets.pdf"><i><b>White Sheets</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/transparent_sheets.pdf"><i><b>Transparent Sheets</b></i></a></li>
           </ul>
           </p>
         </div>
