--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -82,7 +82,7 @@
         <div class="card col-12 col-lg-10">
           <div class="card-wrapper">
             <div class="card-box align-center">
-              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>INTERPRETAZIONE ED ESECUZIONE DI CARTRIDGE MUSIC - JOHN CGE</strong></h4>
+              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>INTERPRETAZIONE ED ESECUZIONE DI CARTRIDGE MUSIC - JOHN CAGE</strong></h4>
             </div>
           </div>
         </div>
