--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -128,6 +128,7 @@
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><i><b>Cartridge Music, ita ver</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/white_sheets.pdf"><i><b>White Sheets</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/transparent_sheets.pdf"><i><b>Transparent Sheets</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/adore_illustrator_cartridge_music_score_maker.ai"><i><b>Adobe Illustrator Cartridge Music Score Maker</b></i></a></li>
           </ul>
           </p>
         </div>
