--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -105,7 +105,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/01_00_introduzione.html"><b>01. Introduzione</b></a></li>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/02_00_iistruzioni.html"><b>02. Istruzioni</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/02_00_istruzioni.html"><b>02. Istruzioni</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_00_realizzazione_delle_cartucce.html"><b>03. Realizzazione delle Cartucce</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_realizzazione_della_partitura.html"><b>04. Realizzazione della Partitura</b></a></li>
           </ul>
           </p>
         </div>
