--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -127,14 +127,14 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><i><b>Cartridge Music, ita ver</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/white_sheets.pdf"><i><b>White Sheets</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/transparent_sheets.pdf"><i><b>Transparent Sheets</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/adore_illustrator_cartridge_music_score_maker.ai"><i><b>Adobe Illustrator Cartridge Music Score Maker</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cageCartridgeMusic-gen2020.pdf"><i><b>Cartridga Music by D'Alò - Terlizzi</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><b>Cartridge Music, ita ver</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/white_sheets.pdf"><b>White Sheets</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/transparent_sheets.pdf"<b>Transparent Sheets</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/adore_illustrator_cartridge_music_score_maker.ai"><b>Adobe Illustrator Cartridge Music Score Maker</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/CartridgeMusic-gen2020.pdf"><b>Cartridga Music by D'Alò - Terlizzi</b></a></li>
           </ul>
           </p>
-        </div>
+        </div>0
       </div>
     </div>
   </section>
