--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -127,11 +127,10 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/Cartridge_Music_Score.pdf"><b>Cartridge Music score</b></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><b>Cartridge Music, ita ver</b></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/white_sheets.pdf"><b>White Sheets</b></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/transparent_sheets.pdf"<b>Transparent Sheets</b></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/adore_illustrator_cartridge_music_score_maker.ai"><b>Adobe Illustrator Cartridge Music Score Maker</b></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/CartridgeMusic-gen2020.pdf"><b>Cartridga Music by D'Alò - Terlizzi</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/CartridgeMusic-gen2020.pdf"><b>Cartridge Music - score by E.D'Alò, R.Terlizzi</b></a></li>
           </ul>
           </p>
         </div>0
@@ -151,6 +150,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.youtube.com/watch?v=qoRPaWhovEc"><b>Video - Michael Schell introduces John Cage's Cartridge Music</b></a></li>
+            <li><a href="http://www.jaimeoliver.pe/recipes/archaeology/cartridge"><b>Realizing Cage’s Cartridge Music - Jaime E Oliver</b></a></li>
           </ul>
           <br><br>
           </p>
