--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -133,7 +133,7 @@
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/CartridgeMusic-gen2020.pdf"><b>Cartridge Music - score by E.D'Alò, R.Terlizzi</b></a></li>
           </ul>
           </p>
-        </div>0
+        </div>
       </div>
     </div>
   </section>
