--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -128,7 +128,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/Cartridge_Music_Score.pdf"><b>Cartridge Music score</b></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><b>Cartridge Music, ita ver</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/cartridge_music_italiano.pdf"><b>Cartridge Music, italian version</b></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/adore_illustrator_cartridge_music_score_maker.ai"><b>Adobe Illustrator Cartridge Music Score Maker</b></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/CartridgeMusic-gen2020.pdf"><b>Cartridge Music - score by E.D'Alò, R.Terlizzi</b></a></li>
           </ul>
