--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -109,6 +109,9 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/01_00_introduzione.html"><b>01.01. Cosa sono le Cartucce?</b></a></li>
             </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html"><b>02. Istruzioni della Partitura Originale</b></a></li>
+            <ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/02_01_interpretazione_delle_istruzioni.html"><b>02.01. Interpretazione delle Istruzioni</b></a></li>
+            </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html"><b>03. Setup delle Tecnologie</b></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_realizzazione_della_partitura.html"><b>04. Realizzazione della Partitura</b></a></li>
           </ul>
