--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -116,6 +116,7 @@
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_01_scelta_delle_cartucce.html"><b>03.01. Scelta delle Cartucce</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_02_scelta_dei_suoni_ausiliari.html"><b>03.02. Scelta dei Suoni Ausiliari</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_03_sistema_di_amplificazione.html"><b>03.03. Sistema di Amplificazione</b></a></li>
             </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_realizzazione_della_partitura.html"><b>04. Realizzazione della Partitura</b></a></li>
           </ul>
