--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -119,6 +119,10 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/03_03_sistema_di_amplificazione.html"><b>03.03. Sistema di Amplificazione</b></a></li>
             </ul>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_realizzazione_della_partitura.html"><b>04. Realizzazione della Partitura</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/04_00_realizzazione_della_partitura.html"><b>05. Testimonianze di Altre Esecuzioni</b></a></li>
+            <ul>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_01_cartridge_music_by_federico_scalas.html"><b>05.01. Cartridge Music by Federico Scalas</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_02_cartridge_music_by_elena_dalo.html"><b>05.02. Cartridge Music by Elena D'Alò</b></a></li>
           </ul>
           </p>
         </div>
