--- a/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
+++ b/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
@@ -111,8 +111,7 @@
                     Universal Turntable Stylus Cartridge</b></a>
                     <br>
                     <br>
-                Technical data:
-                <br>
+                <b>Technical data:</b>
                 <br>
                 Frequency range: 80-10000 kHz
                 <br>
@@ -127,6 +126,7 @@
                 Size: 10 x 10 x 28 mm.
                 <br>
                 Material: Plastic, ceramic, steel
+                <br>
               </li>
             </ul>
             <li><b>Suoni ausiliari</b></li>
