--- a/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
+++ b/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
@@ -131,6 +131,17 @@
               <br>
             </ul>
             <li><b>Suoni ausiliari</b></li>
+            <ul>
+              <li><a href="https://www.amazon.co.uk/Vzer-Contact-Microphone-Pickup-Guitar/dp/B01L8HBS0E/ref=sr_1_14?crid=21UKTYS6JC47Z&keywords=pickup+piezo&qid=1660231224&s=musical-instruments&sprefix=pickup+piezo%2Cmi%2C47&sr=1-14"><b>MEETOZ Piezo Contact Microphone</b></a>
+                    <br>
+                    <br>
+                <b>Technical data:</b>
+                <br>
+                
+                <br>
+              </li>
+              <br>
+            </ul>
             <li><b>Sistema di amplificazione</b></li>
           </ul>
           </p>
