--- a/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
+++ b/pages/learn/cartridge_music_john_cage/03_00_setup_delle_tecnologie.html
@@ -107,37 +107,34 @@
           <ul>
             <li><b>Cartuccce</b></li>
             <ul>
-              <li><a href="https://www.amazon.co.uk/Navaris-Record-Player-Needle-Replacement/dp/B07K4RNNTN/ref=sr_1_25?crid=DGW7MWTA9PXP&keywords=phono+cartridge&qid=1660230533&s=musical-instruments&sprefix=phono%2Cmi%2C47&sr=1-25"><b>Navaris -
-                    Universal Turntable Stylus Cartridge</b></a>
+              <li><a href="https://uk.rs-online.com/web/p/binding-posts/6684590"><b>RS PRO 30A, Silver Binding Post With Brass Contacts and Nickel Plated - 5mm Hole Diameter</b></a>
                     <br>
                     <br>
                 <b>Technical data:</b>
                 <br>
-                Frequency range: 80-10000 kHz
+                Contact material of brass
                 <br>
-                Channel Balance: 1.5 dB
+                Contact plating of nickel
                 <br>
-                Channel separation: more than 15 dB (dB at 1kHz/10kHz)
+                Current rating of 30 A
                 <br>
-                Needle type: Steel needle with sapphire tip and ceramic stereo pickup service
-                <br>
-                Life needle: 300h
-                <br>
-                Size: 10 x 10 x 28 mm.
-                <br>
-                Material: Plastic, ceramic, steel
+                Accepts spade connector of 5 mm diameter
                 <br>
               </li>
               <br>
             </ul>
             <li><b>Suoni ausiliari</b></li>
             <ul>
-              <li><a href="https://www.amazon.co.uk/Vzer-Contact-Microphone-Pickup-Guitar/dp/B01L8HBS0E/ref=sr_1_14?crid=21UKTYS6JC47Z&keywords=pickup+piezo&qid=1660231224&s=musical-instruments&sprefix=pickup+piezo%2Cmi%2C47&sr=1-14"><b>MEETOZ Piezo Contact Microphone</b></a>
+              <li><a href="https://uk.rs-online.com/web/p/piezo-buzzers/1674876"><b>Murata Diaphragm External Piezo Buzzer, 27 (Dia.) x 0.54mm</b></a>
                     <br>
                     <br>
                 <b>Technical data:</b>
                 <br>
-                
+                Maximum Frequency	4.6kHz
+                <br>
+                Diameter	27mm
+                <br>
+                Tone Type	Diaphragm
                 <br>
               </li>
               <br>
