--- a/pages/learn/cartridge_music_john_cage/05_01_cartridge_music_by_federico_scalas.html
+++ b/pages/learn/cartridge_music_john_cage/05_01_cartridge_music_by_federico_scalas.html
@@ -91,6 +91,48 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    Durata totale dell'esecuzione a libera Scelta
+
+                    il tempo della durta   unità temporale durata della composizione
+
+
+                    la linea tratteggiata è tutta la performance = tompo totale scelto arbitrariamente
+
+                    gain volumi e toni, prima amplificatori per chitarra, tono apri chiudi della chitarra, ora mixer
+
+                    l'orologio è tipo una rosa dei venti
+
+                    amplifica l'inudibile
+
+                    morsetti e pickup
+
+                    dentro al morsetto ci metto l'oggetto, fuori alla scatoletta
+
+                    esplorazione del suono invisibile
+
+                    a livello multimediale funziona molto bene mettere una telecamera sul tavolo e proiettarlo (correlazione visiva) senso didattico, mostrare parti del suono che non si conoscono
+
+                    posizionare il i diffusori vicino alla sorgente
+
+                    utilizza spesso come oggetto sonoro la molla colorata di metallo slinky
+
+                    filo di nilon
+
+
+                    sul tavolo importante conviene poggiare una tavola di compensato fina 2-3mm deve essere risonante
+
+                    non devo spendere soldi, cose rimediate
+
+                    metadiapason video esecuzione
+
+                    ai tempi non esistevano molti effetti, l'unica cosa che aveva per fare effetti particolari erano dei loop sequencer. dove scrive loop intende ripetizione dell'azione, loop manuale
+
+                    gesti a tua discrezione sui Testimonianze
+                    john cage non ha negato cosa sarebbe cosa sarebbe
+                    snaturante per il pezzo, non modificare il suono, ma sentirlo amplificato all'estremo.
+
+                    bunghete bang suona con oggeti trovati per strada, non altera il 02_00_istruzioni_della_partitura_originale
+                    scopri sonorità inaspettate
 
                   </p>
                 </div>
