--- a/pages/learn/cartridge_music_john_cage/01_01_cosa_sono_le_cartucce.html
+++ b/pages/learn/cartridge_music_john_cage/01_01_cosa_sono_le_cartucce.html
@@ -84,6 +84,20 @@
     </div>
 </section>
 
+<!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+          <div class="container-fluid">
+              <div class="row justify-content-center">
+                  <div class="col-12 col-lg-5">
+                      <div class="image-wrapper">
+                          <img src="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/img/cartridge.webp" alt="Cartridge">
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Phonographic Cartridge</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -91,12 +105,29 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    The word 'Cartridge' in the title refers to the cartridge of phonographic pick-ups, into the aperture of which is fitted a needle. In Cartridge Music, the performer is instructed to insert all manner of unspecified small objects into the
+                    cartridge; prior performances have involved such items as pipe cleaners, matches, feathers, wires, etc. Furniture may be used as well, amplified via contact microphones. All sounds are to be amplified and are controlled by the
+                    performer(s).
                   </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/downloads/cartridge_music_john_cage/img/needle.webp" alt="Needle">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Needle</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
 
 
 
