--- a/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
+++ b/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
@@ -106,12 +106,14 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Ogni esecutore crea la propria partitura dal materiale fornito, che è il
             seguente:
-            1. 20 fogli numerati con forme incise.
-            2. Un foglio trasparente con punti.
-            3. Un foglio trasparente con cerchi.
-            4. Un foglio trasparente con un cerchi disegnati come cronometri.
-            5. Un foglio trasparente con una linea curva tratteggiata avente ad
-            un'estremità un cerchio.
+            <ol>
+            <li>1. 20 fogli numerati con forme incise.</li>
+            <li>Un foglio trasparente con punti.</li>
+            <li>Un foglio trasparente con cerchi.</li>
+            <li>Un foglio trasparente con un cerchi disegnati come cronometri.</li>
+            <li>Un foglio trasparente con una linea curva tratteggiata avente ad
+            un'estremità un cerchio.</li>
+          </ol>
             Prendendo il foglio numerato corrispondente al numero di testine (cartridge [Una testina (=cartridge) è un normale pickup fonografico in cui di solito viene inserito un ago da riproduzione])
             disponibili, (ciascuna con il proprio amplificatore e altoparlante), adagiarvi
             sopra tutti i fogli trasparenti, disponendo il 5° in modo che il cerchio alla
