--- a/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
+++ b/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
@@ -114,7 +114,7 @@
             <li>Un foglio trasparente con una linea curva tratteggiata avente ad
             un'estremità un cerchio.</li>
           </ol>
-            Prendendo il foglio numerato corrispondente al numero di testine (cartridge [Una testina (=cartridge) è un normale pickup fonografico in cui di solito viene inserito un ago da riproduzione])
+            Prendendo il foglio numerato corrispondente al numero di testine [una testina (=cartridge) è un normale pickup fonografico in cui di solito viene inserito un ago da riproduzione])
             disponibili, (ciascuna con il proprio amplificatore e altoparlante), adagiarvi
             sopra tutti i fogli trasparenti, disponendo il 5° in modo che il cerchio alla
             fine della linea tratteggiata contenga un punto esterno ad una sagoma e in modo
