--- a/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
+++ b/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
@@ -107,7 +107,7 @@
             Ogni esecutore crea la propria partitura dal materiale fornito, che è il
             seguente:
             <ol>
-            <li>1. 20 fogli numerati con forme incise.</li>
+            <li>20 fogli numerati con forme incise.</li>
             <li>Un foglio trasparente con punti.</li>
             <li>Un foglio trasparente con cerchi.</li>
             <li>Un foglio trasparente con un cerchi disegnati come cronometri.</li>
