--- a/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
+++ b/pages/learn/cartridge_music_john_cage/02_00_istruzioni_della_partitura_originale.html
@@ -114,6 +114,7 @@
             <li>Un foglio trasparente con una linea curva tratteggiata avente ad
             un'estremità un cerchio.</li>
           </ol>
+          <p class="mbr-text mbr-fonts-style display-7">
             Prendendo il foglio numerato corrispondente al numero di testine [una testina (=cartridge) è un normale pickup fonografico in cui di solito viene inserito un ago da riproduzione]
             disponibili, (ciascuna con il proprio amplificatore e altoparlante), adagiarvi
             sopra tutti i fogli trasparenti, disponendo il 5° in modo che il cerchio alla
